classDiagram
    class RDTDispatcher {
        +sock: socket
        +data_queue: Queue
        +_ack_listeners: Dict
        +running: bool
        +__init__(sock: socket)
        +start()
        +stop()
        +_listen_loop()
        +_handle_ack(packet, addr)
        +_handle_data(packet, addr)
        +register_ack_waiter(host, port, seq)
        +unregister_ack_waiter(host, port, seq)
        +get_data_packet(timeout)
    }

    class RDTSender {
        +dest_addr: Tuple
        +dispatcher: RDTDispatcher
        +curr_seq: int
        +__init__(dest_host, dest_port, dispatcher)
        +send(data_chunk: bytes) bool
        +close()
    }

    class RDTReceiver {
        +dispatcher: RDTDispatcher
        +sock: socket
        +expected_seqs: Dict
        +running: bool
        +__init__(dispatcher)
        +start_receiving() Generator
        +reset_state(addr)
        +stop()
    }

    class PacketUtils {
        <<module>>
        +calculate_checksum(data)
        +make_packet(seq_num, is_ack, payload)
        +make_data_packet(seq_num, data)
        +make_ack_packet(seq_num)
        +unpack_and_validate(packet_bytes)
    }

    RDTDispatcher "1" --* "many" RDTSender : manages ACKs for
    RDTDispatcher "1" --* "1" RDTReceiver : pushes data to
    RDTSender ..> PacketUtils : uses
    RDTReceiver ..> PacketUtils : uses
    RDTDispatcher ..> PacketUtils : uses